test/2/type/ann-Int-Str.err
type error: test/2/type/ann-Int-Str.ploy:1:8-9: annotated: actual type is not expected type. actual type: Int
| main = 0:Str
         ~
note: test/2/type/ann-Int-Str.ploy:1:10-13: expected type: Str
| main = 0:Str
           ~~~
